shift fixed

--- a/freedom/css/cover.css
+++ b/freedom/css/cover.css
@@ -37,12 +37,12 @@
 
   .landingleft {
     display: inline-block;
-    width: 60%;
+    width: 59%;
     padding: 4vw 7vw;
   }
   .landingright {
     display: inline-block;
-    width: 40%;
+    width: 39%;
     position: absolute;
     top: 0;
   }
@@ -278,7 +278,7 @@ nav > .container {
 
 .carousel-inner img {
   width: 100%;
-  height: 50vw !important;
+  height: 80vh !important;
 }
 
 /* #gallery_images{
@@ -364,7 +364,7 @@ nav > .container {
 }
 
 .contactphoto{
-    margin: 5px;
+    /* margin: 5px; */
     opacity: 0.9;
     /* width: 100%; */
     border: thin solid darkslategray;
@@ -380,7 +380,7 @@ nav > .container {
 
 .contactphoto1{
     float:right;
-    margin: 5px;
+    /* margin: 5px; */
     opacity: 0.9;
     border: thin solid darkslategray;
     border-radius: 250px;
@@ -523,10 +523,10 @@ nav > .container {
 
 .button {
     background-color:rgb(246,123,57); /* Green */
-    border: none;
+    border: 2px solid rgb(246,123,57);
     color: white;
     padding: 10px;
-    margin-left:0;
+    /* margin-left:0; */
     text-align: center;
     text-decoration: none;
     /* display: inline-block; */
@@ -549,6 +549,10 @@ nav > .container {
 
 #desc {
   padding-bottom: 3vw;
+}
+
+#des1, #des2, #des3 {
+  z-index: -99;
 }
 
   #footer_nav_bar{
@@ -632,6 +636,7 @@ nav > .container {
   #register{
     font-family: 'Roboto', sans-serif;
     font: white;
+    outline: 0;
   }
 
 .page-footer{
@@ -748,7 +753,7 @@ nav > .container {
       width: 90%;
       left: 5%;
       height: 340px;
-      top: 0;
+      top: 16vh;
     }
   }
 
@@ -780,16 +785,33 @@ nav > .container {
   @media only screen and (max-width:500px) {
     .landingleft {
       padding: 4vw 5vw;
+    }  
+    #p1 {
+      font-size: 3.5vw;
+    }
+    #desc {
+      font-size: 3.2vw !important;
+    }
+    #main_hdg {
+      font-size: 6vw !important;
+      text-align: center !important;
+    }
+    #des1, #des3 {
+      width: 20%;
+    }
+    #des2 {
+      width: 30%;
     }
     #points {
       font-size: 3vw;
     }
     #navimg {
-      width: 14%;
+      width: 20%;
       margin: auto;
     }
     .landing {
-      width: 53vw;
+      width: 41vw;
+      height: 66vh;
       padding: 15vw 0;
     }
   }
